--- a/styles/globals.css
+++ b/styles/globals.css
@@ -129,3 +129,46 @@
   -webkit-animation: fadein 2.5s;
   animation: fadein 2.5s;
 }
+
+/* 404 Error Styling */
+.code-area {
+  position: absolute;
+  width: 320px;
+  min-width: 320px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+/* HOVER EFFECT */
+.cool {
+  padding-top: 10px;
+}
+
+.cool:before {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #7f96bb;
+  transform: scaleX(0);
+}
+
+.cool:hover:before {
+  transform: scaleX(1);
+}
+
+a {
+  position: relative;
+  color: inherit;
+  text-decoration: none;
+  line-height: 24px;
+}
+
+a:before,
+a:after {
+  content: '';
+  position: absolute;
+  transition: transform 0.5s ease;
+}
