--- a/styles/globals.css
+++ b/styles/globals.css
@@ -186,6 +186,17 @@ a:after {
   background-color: #7f96bb;
 }
 
+.css-69z67c-MuiTabs-scroller {
+    display: flex;
+    justify-content: flex-start;
+}
+
+@media (min-width: 22.875rem) {
+  .css-69z67c-MuiTabs-scroller {
+      justify-content: center;
+    }
+}
+
 button {
   --tw-shadow-colored: none;
 }
