--- a/styles/globals.css
+++ b/styles/globals.css
@@ -181,8 +181,16 @@ a:after {
 .MuiTabs-flexContainer .css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected {
   color: #7f96bb;
 }
+/* Material UI not rendering Server Side so hopefully this class fixes it */
+.css-1q2h7u5.Mui-selected {
+  color: #7f96bb;
+}
 
 .MuiTabs-scroller .css-1aquho2-MuiTabs-indicator {
+  background-color: #7f96bb;
+}
+/* Material UI not rendering Server Side so hopefully this class fixes it */
+.css-ttwr4n {
   background-color: #7f96bb;
 }
 
@@ -195,6 +203,10 @@ a:after {
   .css-69z67c-MuiTabs-scroller {
       justify-content: center;
     }
+
+  .css-k008qs {
+    justify-content: center;
+  }
 }
 
 button {
