--- a/styles/globals.css
+++ b/styles/globals.css
@@ -319,28 +319,26 @@ button {
   opacity: 0;
 }
 
-.slide-up:first-child span {
-  -webkit-animation: hero-animation .75s .4s forwards;;
-  animation: hero-animation .75s .4s forwards;
-}
-
-.slide-up:last-child span {
-  -webkit-animation: hero-animation 1.2s .55s forwards;;
-  animation: hero-animation 1.2s .55s forwards;
-}
-
 @keyframes hero-animation {
   0% {
-    -webkit-opacity: 1;
     opacity: 1;
     -webkit-transform: translate3d(0, 120%, 0);
     transform: translate3d(0, 120%, 0);
   }
 
   100% {
-    -webkit-opacity: 1;
     opacity: 1;
     -webkit-transform: translate3d(0);
     transform: translate3d(0);
   }
+}
+
+.slide-up:first-child span {
+  -webkit-animation: hero-animation .75s .4s forwards;
+  animation: hero-animation .75s .4s forwards;
+}
+
+.slide-up:last-child span {
+  -webkit-animation: hero-animation 1.2s .55s forwards;
+  animation: hero-animation 1.2s .55s forwards;
 }
