--- a/styles/globals.css
+++ b/styles/globals.css
@@ -333,6 +333,18 @@ button {
   }
 }
 
+@-webkit-keyframes hero-animation {
+  0% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 120%, 0);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translate3d(0);
+  }
+}
+
 .slide-up:first-child span {
   -webkit-animation: hero-animation .75s .4s forwards;
   animation: hero-animation .75s .4s forwards;
