--- a/styles/globals.css
+++ b/styles/globals.css
@@ -328,8 +328,8 @@ button {
 
   100% {
     opacity: 1;
-    -webkit-transform: translate3d(0);
-    transform: translate3d(0);
+    -webkit-transform: translate(0);
+    transform: translate(0);
   }
 }
 
@@ -341,9 +341,4 @@ button {
 .slide-up:last-child span {
   -webkit-animation: hero-animation 1.2s .55s forwards;
   animation: hero-animation 1.2s .55s forwards;
-}
-
-body {
-  -webkit-perspective: inherit;
-  perspective: inherit;
 }
