--- a/styles/globals.css
+++ b/styles/globals.css
@@ -342,3 +342,15 @@ button {
   -webkit-animation: hero-animation 1.2s .55s forwards;
   animation: hero-animation 1.2s .55s forwards;
 }
+
+/* ADJUSTING WIDTH OF WORK CTA's */
+@media(max-width: 375px) {
+  .work-ctas {
+    flex-direction: column;
+    width: 12rem;
+  }
+  .work-ctas > a {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
